--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; pyobis 1.0.0 documentation</title>
+  <title>Index &mdash; pyobis 1.1.4 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
   <!--[if lt IE 9]>
@@ -28,7 +28,7 @@
             <a href="index.html" class="icon icon-home"> pyobis
           </a>
               <div class="version">
-                1.0.0
+                1.1.4
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -74,64 +74,10 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#A"><strong>A</strong></a>
- | <a href="#C"><strong>C</strong></a>
- | <a href="#G"><strong>G</strong></a>
- | <a href="#L"><strong>L</strong></a>
- | <a href="#M"><strong>M</strong></a>
- | <a href="#N"><strong>N</strong></a>
+ <a href="#M"><strong>M</strong></a>
  | <a href="#P"><strong>P</strong></a>
- | <a href="#R"><strong>R</strong></a>
- | <a href="#S"><strong>S</strong></a>
- | <a href="#T"><strong>T</strong></a>
  
 </div>
-<h2 id="A">A</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="nodes.html#pyobis.nodes.activities">activities() (pyobis.nodes method)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="taxa.html#pyobis.taxa.annotations">annotations() (pyobis.taxa method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="C">C</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="occurrences.html#pyobis.occurrences.centroid">centroid() (pyobis.occurrences method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="G">G</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="dataset.html#pyobis.dataset.get">get() (pyobis.dataset method)</a>
-
-      <ul>
-        <li><a href="occurrences.html#pyobis.occurrences.get">(pyobis.occurrences method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="occurrences.html#pyobis.occurrences.getpoints">getpoints() (pyobis.occurrences method)</a>
-</li>
-      <li><a href="occurrences.html#pyobis.occurrences.grid">grid() (pyobis.occurrences method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="L">L</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="checklist.html#pyobis.checklist.list">list() (pyobis.checklist method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -139,70 +85,33 @@
     module
 
       <ul>
-        <li><a href="checklist.html#module-pyobis">pyobis</a>, <a href="dataset.html#module-pyobis">[1]</a>, <a href="nodes.html#module-pyobis">[2]</a>, <a href="occurrences.html#module-pyobis">[3]</a>, <a href="taxa.html#module-pyobis">[4]</a>
+        <li><a href="checklist.html#module-pyobis">pyobis</a>, <a href="dataset.html#module-pyobis">[1]</a>, <a href="nodes.html#module-pyobis">[2]</a>, <a href="taxa.html#module-pyobis">[3]</a>
+</li>
+        <li><a href="occurrences.html#module-pyobis.occurrences">pyobis.occurrences</a>
 </li>
       </ul></li>
-  </ul></td>
-</tr></table>
-
-<h2 id="N">N</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="checklist.html#pyobis.checklist.newest">newest() (pyobis.checklist method)</a>
-</li>
   </ul></td>
 </tr></table>
 
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="occurrences.html#pyobis.occurrences.point">point() (pyobis.occurrences method)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     pyobis
 
       <ul>
-        <li><a href="checklist.html#module-pyobis">module</a>, <a href="dataset.html#module-pyobis">[1]</a>, <a href="nodes.html#module-pyobis">[2]</a>, <a href="occurrences.html#module-pyobis">[3]</a>, <a href="taxa.html#module-pyobis">[4]</a>
+        <li><a href="checklist.html#module-pyobis">module</a>, <a href="dataset.html#module-pyobis">[1]</a>, <a href="nodes.html#module-pyobis">[2]</a>, <a href="taxa.html#module-pyobis">[3]</a>
 </li>
       </ul></li>
   </ul></td>
-</tr></table>
-
-<h2 id="R">R</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="checklist.html#pyobis.checklist.redlist">redlist() (pyobis.checklist method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="S">S</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="dataset.html#pyobis.dataset.search">search() (pyobis.dataset method)</a>
+      <li>
+    pyobis.occurrences
 
       <ul>
-        <li><a href="nodes.html#pyobis.nodes.search">(pyobis.nodes method)</a>
-</li>
-        <li><a href="occurrences.html#pyobis.occurrences.search">(pyobis.occurrences method)</a>
-</li>
-        <li><a href="taxa.html#pyobis.taxa.search">(pyobis.taxa method)</a>
+        <li><a href="occurrences.html#module-pyobis.occurrences">module</a>
 </li>
       </ul></li>
-  </ul></td>
-</tr></table>
-
-<h2 id="T">T</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="taxa.html#pyobis.taxa.taxon">taxon() (pyobis.taxa method)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="occurrences.html#pyobis.occurrences.tile">tile() (pyobis.occurrences method)</a>
-</li>
   </ul></td>
 </tr></table>
 
