--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; pyobis 1.1.4 documentation</title>
+  <title>Index &mdash; pyobis 1.2.4 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
   <!--[if lt IE 9]>
@@ -28,7 +28,7 @@
             <a href="index.html" class="icon icon-home"> pyobis
           </a>
               <div class="version">
-                1.1.4
+                1.2.4
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -74,10 +74,102 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#M"><strong>M</strong></a>
+ <a href="#A"><strong>A</strong></a>
+ | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
+ | <a href="#G"><strong>G</strong></a>
+ | <a href="#L"><strong>L</strong></a>
+ | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
+ | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
+ | <a href="#R"><strong>R</strong></a>
+ | <a href="#S"><strong>S</strong></a>
+ | <a href="#T"><strong>T</strong></a>
  
 </div>
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="nodes.html#pyobis.nodes.NodesQuery.activities">activities() (pyobis.nodes.NodesQuery method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="taxa.html#pyobis.taxa.TaxaQuery.annotations">annotations() (pyobis.taxa.TaxaQuery method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="occurrences.html#pyobis.occurrences.OccQuery.centroid">centroid() (pyobis.occurrences.OccQuery method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="checklist.html#pyobis.checklist.ChecklistQuery">ChecklistQuery (class in pyobis.checklist)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="dataset.html#pyobis.dataset.DatasetQuery">DatasetQuery (class in pyobis.dataset)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="dataset.html#pyobis.dataset.DatasetQuery.get">get() (pyobis.dataset.DatasetQuery method)</a>
+
+      <ul>
+        <li><a href="occurrences.html#pyobis.occurrences.OccQuery.get">(pyobis.occurrences.OccQuery method)</a>
+</li>
+      </ul></li>
+      <li><a href="dataset.html#pyobis.dataset.DatasetQuery.get_mapper_url">get_mapper_url() (pyobis.dataset.DatasetQuery method)</a>
+
+      <ul>
+        <li><a href="nodes.html#pyobis.nodes.NodesQuery.get_mapper_url">(pyobis.nodes.NodesQuery method)</a>
+</li>
+        <li><a href="occurrences.html#pyobis.occurrences.OccQuery.get_mapper_url">(pyobis.occurrences.OccQuery method)</a>
+</li>
+      </ul></li>
+      <li><a href="checklist.html#pyobis.checklist.ChecklistQuery.get_search_url">get_search_url() (pyobis.checklist.ChecklistQuery method)</a>
+
+      <ul>
+        <li><a href="dataset.html#pyobis.dataset.DatasetQuery.get_search_url">(pyobis.dataset.DatasetQuery method)</a>
+</li>
+        <li><a href="nodes.html#pyobis.nodes.NodesQuery.get_search_url">(pyobis.nodes.NodesQuery method)</a>
+</li>
+        <li><a href="occurrences.html#pyobis.occurrences.OccQuery.get_search_url">(pyobis.occurrences.OccQuery method)</a>
+</li>
+        <li><a href="taxa.html#pyobis.taxa.TaxaQuery.get_search_url">(pyobis.taxa.TaxaQuery method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="occurrences.html#pyobis.occurrences.OccQuery.getpoints">getpoints() (pyobis.occurrences.OccQuery method)</a>
+</li>
+      <li><a href="occurrences.html#pyobis.occurrences.OccQuery.grid">grid() (pyobis.occurrences.OccQuery method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="L">L</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="checklist.html#pyobis.checklist.ChecklistQuery.list">list() (pyobis.checklist.ChecklistQuery method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="occurrences.html#pyobis.occurrences.OccQuery.lookup_taxon">lookup_taxon() (pyobis.occurrences.OccQuery method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -85,26 +177,68 @@
     module
 
       <ul>
-        <li><a href="checklist.html#module-pyobis">pyobis</a>, <a href="dataset.html#module-pyobis">[1]</a>, <a href="nodes.html#module-pyobis">[2]</a>, <a href="taxa.html#module-pyobis">[3]</a>
+        <li><a href="checklist.html#module-pyobis.checklist">pyobis.checklist</a>
+</li>
+        <li><a href="dataset.html#module-pyobis.dataset">pyobis.dataset</a>
+</li>
+        <li><a href="nodes.html#module-pyobis.nodes">pyobis.nodes</a>
 </li>
         <li><a href="occurrences.html#module-pyobis.occurrences">pyobis.occurrences</a>
 </li>
+        <li><a href="taxa.html#module-pyobis.taxa">pyobis.taxa</a>
+</li>
       </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="checklist.html#pyobis.checklist.ChecklistQuery.newest">newest() (pyobis.checklist.ChecklistQuery method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="nodes.html#pyobis.nodes.NodesQuery">NodesQuery (class in pyobis.nodes)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="O">O</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="occurrences.html#pyobis.occurrences.OccQuery">OccQuery (class in pyobis.occurrences)</a>
+</li>
   </ul></td>
 </tr></table>
 
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="occurrences.html#pyobis.occurrences.OccQuery.point">point() (pyobis.occurrences.OccQuery method)</a>
+</li>
       <li>
-    pyobis
+    pyobis.checklist
 
       <ul>
-        <li><a href="checklist.html#module-pyobis">module</a>, <a href="dataset.html#module-pyobis">[1]</a>, <a href="nodes.html#module-pyobis">[2]</a>, <a href="taxa.html#module-pyobis">[3]</a>
+        <li><a href="checklist.html#module-pyobis.checklist">module</a>
+</li>
+      </ul></li>
+      <li>
+    pyobis.dataset
+
+      <ul>
+        <li><a href="dataset.html#module-pyobis.dataset">module</a>
 </li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    pyobis.nodes
+
+      <ul>
+        <li><a href="nodes.html#module-pyobis.nodes">module</a>
+</li>
+      </ul></li>
       <li>
     pyobis.occurrences
 
@@ -112,6 +246,51 @@
         <li><a href="occurrences.html#module-pyobis.occurrences">module</a>
 </li>
       </ul></li>
+      <li>
+    pyobis.taxa
+
+      <ul>
+        <li><a href="taxa.html#module-pyobis.taxa">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="checklist.html#pyobis.checklist.ChecklistQuery.redlist">redlist() (pyobis.checklist.ChecklistQuery method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="S">S</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="dataset.html#pyobis.dataset.DatasetQuery.search">search() (pyobis.dataset.DatasetQuery method)</a>
+
+      <ul>
+        <li><a href="nodes.html#pyobis.nodes.NodesQuery.search">(pyobis.nodes.NodesQuery method)</a>
+</li>
+        <li><a href="occurrences.html#pyobis.occurrences.OccQuery.search">(pyobis.occurrences.OccQuery method)</a>
+</li>
+        <li><a href="taxa.html#pyobis.taxa.TaxaQuery.search">(pyobis.taxa.TaxaQuery method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="taxa.html#pyobis.taxa.TaxaQuery">TaxaQuery (class in pyobis.taxa)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="taxa.html#pyobis.taxa.TaxaQuery.taxon">taxon() (pyobis.taxa.TaxaQuery method)</a>
+</li>
+      <li><a href="occurrences.html#pyobis.occurrences.OccQuery.tile">tile() (pyobis.occurrences.OccQuery method)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -124,7 +303,7 @@
   <hr/>
 
   <div role="contentinfo">
-    <p>&#169; Copyright 2016, Scott Chamberlain.</p>
+    <p>&#169; Copyright 2022, pyOBIS Community.</p>
   </div>
 
   Built with <a href="https://www.sphinx-doc.org/">Sphinx</a> using a
